--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^1.0.0",
     "react-burger-menu": "^2.6.13",
     "react-dom": "^16.13.1",
+    "react-responsive": "^8.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "sidebar": "^1.0.2"
